# deep-microcompression

./: .gitignore  README.md
deployment/: CMakeLists.txt  deep_microcompression.h
deployment/core/: define.h  quantization_property.h
deployment/layers/: activation.cpp  activation.h  batchnorm.cpp  batchnorm.h  block.cpp  block.h  branch.cpp  branch.h  conv.cpp  conv.h  flatten.cpp  flatten.h  fused_layers.cpp  fused_layers.h  layer.cpp  layer.h  linear.cpp  linear.h  pad.cpp  pad.h  padding.cpp  padding.h  pooling.cpp  pooling.h
deployment/models/: sequential.cpp  sequential.h
development/: __init__.py  utils.py
development/compressors/: prune_channel.py  quantize.py
development/layers/: __init__.py  activation.py  batchnorm.py  block.py  branch_layer.py  conv.py  flatten.py  fused_layers.py  layer.py  linear.py  padding.py  pooling.py
development/models/: __init__.py  estimator.py  fuse.py  sequential.py  utils.py
examples/arduino_uno_lenet5/: platformio.ini  readme.md
examples/arduino_uno_lenet5/include/: lenet5_model.h  lenet5_model_test_input.h  uno_model.h  uno_model_test_input.h
examples/arduino_uno_lenet5/src/: lenet5_model_def.cpp  lenet5_model_params.cpp  main.cpp  uno_model_def.cpp  uno_model_params.cpp
examples/tiny_model/: generate.py  readme.md
examples/tiny_model/deploy/: CMakeLists.txt
examples/tiny_model/deploy/include/: tiny_model.h  tiny_model_test_input.h
examples/tiny_model/deploy/lib/deep_microcompression/: CMakeLists.txt
examples/tiny_model/deploy/src/: main.cpp  tiny_model_def.cpp  tiny_model_params.cpp
experiments/lenet5/: lenet5_model.keras  lenet5_state_dict.pth  reproduce_lenet5.py  reproduce_tflife_comparison.py  setup_and_run.sh
experiments/lenet5/reproduce_table1/: readme.md  reproduce_table1.py  setup_and_run.sh
experiments/lenet5/reproduce_table3/: lenet5_state_dict.pth  reproduced_table3.py  setup_and_run.sh
experiments/lenet5/reproduce_table4/: readme.md  reproduce_table4.py  setup_and_run.sh
experiments/lenet5/reproduce_tflite/: lenet5_model.keras
experiments/reproduce_nas/: verify_lenet5_nas.ipynb
experiments/reproduce_table1/: readme.md  reproduce_table1.ipynb
experiments/reproduce_table2/: readme.md  reproduce_table2.ipynb
experiments/reproduce_table3/: readme.md  reproduce_table3.ipynb
tests/lenet5_model/: lenet5_state_dict.pth  main.ipynb
tests/mobilenetv1/: main.ipynb
tests/vgg_model/: main.ipynb
